chg: Bugfixes and architechture changes

--- a/config.example.ini
+++ b/config.example.ini
@@ -2,4 +2,8 @@
 Address = <IMAP/POP3 Server Address>
 Port = <IMAP/POP3 Server Port>
 Protocol = <IMAP or POP3>
-Timeout = 30
+Timeout = <Timeout in seconds>
+
+[Backup]
+MaxFileSize = <Max file size in MB>
+FileType = <MBOX or EML>
